[package]
name = "yahoo_fantasy_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"]}
mini-redis = "0.4"
#reqwest = "0.11.22"
reqwest = { version = "0.11.20", features = ["blocking", "json", "serde_json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "3.3.0"
serde_json = "1.0.105"
oauth2 = "4.4.2"
oauth2-client = "0.2.0"
oauth2-yahoo = "0.2.0"
oauth2 = "4.4.2"
chrono = { version = "0.4.31", features= ["serde"] }
futures = { version="0.3.28", features= ["executor"] }
url = "2.3.1"
anyhow = "1.0.75"
url = "2.3.1"