[package]
name = "yahoo_fantasy_api"
version = "0.1.0"
edition = "2021"

[build]
vendor = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"]}
mini-redis = "0.4"
reqwest = { version = "0.11.20", features = ["blocking", "json", "serde_json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_with = "3.3.0"
serde_json = "1.0.105"
chrono = { version = "0.4.31", features= ["serde"] }
futures = { version="0.3.28", features= ["executor"] }
thiserror = { version = "1.0.50", features = [] }
oauth2 = "4.4.2"
anyhow = "1.0.75"
url = "2.4.1"
base64 = "0.13.1"

